# semantic-cloak

./: .gitignore  CITATION.bib  LICENSE  README.md  paper.tex  pyproject.toml  requirements.txt
configs/: adaptive.yaml  default.yaml
scripts/: download_weights.sh  run_experiment.py  train_srnet.py
semantic_cloak/: README.md  __init__.py  crypto.py  embed.py  extract.py  metrics.py  semantic_map.py  stc.py  steganalyzer.py
semantic_cloak/baselines/: __init__.py  ddsp.py  hugo.py  s_uniward.py  wow.py
tests/: __init__.py  test_baselines.py  test_crypto.py  test_embed.py  test_metrics.py  test_stc.py
