[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-cloak"
version = "0.2.0"
description = "VLM-Guided Adaptive Steganography with Honest Security Against Adaptive Detectors"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Samir", email = "samiryzy@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
vlm = [
    "transformers>=4.30.0",
    "segment-anything>=1.0",
]
analysis = [
    "pywavelets>=1.5.0",
    "scipy>=1.10.0",
    "lpips>=0.1.4",
    "scikit-image>=0.21.0",
    "lz4>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "semantic-cloak[vlm,analysis,dev]",
]

[project.urls]
Homepage = "https://github.com/samir/semantic-cloak"
Repository = "https://github.com/samir/semantic-cloak"
Issues = "https://github.com/samir/semantic-cloak/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["semantic_cloak*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
